Part3/Exercise3.07/manifests/deployment-project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: files-storage
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project
          image: PROJECT/IMAGE/PROJECT
          volumeMounts:
          - name: files-storage
            mountPath: /usr/src/app/files
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
